--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </div>
 
         <div class="category-buttons">
-            <div id="cat1">
-                <h1 class="categoryName">GUMMY WORMS</h1>
+            <div id="cat1" class="category category--1">
+                <h1 class="category-name">GUMMY WORMS</h1>
             </div>
-            <div id="cat2">
-                <h1 class="categoryName">FISHING WORMS</h1>
+            <div id="cat2" class="category category--2">
+                <h1 class="category-name">FISHING WORMS</h1>
             </div>
         </div>
     </section>
 
     <script src="app.js"></script>
-    
+
 </body>
 </html>
