added @TheRealKaina's stuff :squint:

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
         </div>
     </nav>
 
-    <div class="green-worm-img"></div>
+    <div class="green-worm-img">
+
+      <section class="moto-message">
+          <h1>IT'S CLEAN</h1>
+          <p>and you know it</p>
+      </section>
+
+    </div>
 
     <section class="categories">
         <div class="categories-h1">
@@ -41,7 +48,19 @@
         </div>
     </section>
 
-    <script src="app.js"></script>
+    <section class="quick-about">
+
+        <div class="about-text">
+            <h1>Who are we?</h1>
+            <p>WormShop Ltd. is a non-official shop that sells worms for cheap prices. We make sure that our worms are clean and ready for immediate use.
+                Because we have just started, we accept sponsorships as they can greatly improve our shop on many different levels.
+                Hello Coca Cola, we are looking at you.
+            </p>
+        </div>
+
+        <div class="about-smiley"></div>
+    </section>
+
 
 </body>
 </html>
